# crew-ai-course

./: Sem título 1.odp
cloud_psa_simulator/: README.md  pyproject.toml  report.md
cloud_psa_simulator/knowledge/: user_preference.txt
cloud_psa_simulator/outputs/: data_analysis_task.md  documentation_task.md  implementation_task.md  process_optimization_task.md  project_management_task.md  reporting_task.md  research_task.md  simulation_task.md  validation_task.md
cloud_psa_simulator/src/cloud_psa_simulator/: __init__.py  crew.py  main.py
cloud_psa_simulator/src/cloud_psa_simulator/config/: agents.yaml  tasks.yaml
